# genpay

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  test_args_output  test_output
.github/: pull_request_template.md
.github/workflows/: LLVM.yml  LLVM18  build.yml  clang.yaml  docs.yml  format.yml  rust.yml  step.yml
.llvmenv_config/llvmenv/: entry.toml
bpf-tester/: Cargo.toml  README.md
bpf-tester/src/: main.rs
genpay/: Cargo.toml
genpay-codegen/: Cargo.toml
genpay-codegen/src/: cranelift.rs  cranelift_backend.rs  enumeration.rs  function.rs  lib.rs  macros.rs  scope.rs  structure.rs  variable.rs
genpay-hir/: Cargo.toml
genpay-hir-lower/: Cargo.toml
genpay-hir-lower/src/: lib.rs
genpay-hir/src/: lib.rs
genpay-lexer/: ANALYSIS.md  Cargo.toml  build.rs
genpay-lexer/src/: error.rs  keywords.rs  lib.rs  macros.rs  token.rs  token_type.rs
genpay-lexer/tests/: keywords.rs  numbers.rs  strings.rs  symbols.rs
genpay-linker/: Cargo.toml
genpay-linker/src/: compiler.rs  lib.rs  linker.rs
genpay-linker/tests/: linker.rs  linking.rs
genpay-parse-two/: Cargo.toml
genpay-parse-two/src/: error.rs  lib.rs  statements.rs
genpay-parser/: Cargo.toml
genpay-parser/src/: error.rs  expressions.rs  lib.rs  statements.rs  types.rs  value.rs
genpay-parser/tests/: expressions.rs  statements.rs  values.rs
genpay-prelude/src/: lib.rs
genpay-semantic/: Cargo.toml
genpay-semantic/src/: element.rs  error.rs  lib.rs  scope.rs  symtable.rs  visitor.rs
genpay-semantic/src/macros/: cast.rs  format.rs  mod.rs  panic.rs  print.rs  println.rs  sizeof.rs
genpay-semantic/tests/: tech.rs
genpay/src/: cli.rs  main.rs
genpay/tests/: TESTS_GUIDE.md  bpf.rs  system_tests.rs
