[package]
name = "genpay-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
genpay-parser = { path = "../genpay-parser" }
genpay-semantic = { path = "../genpay-semantic" }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.12"
cranelift = { version = "0.122.0", optional = true }
cranelift-module = { version = "0.122.0", optional = true }

[features]
cranelift = ["dep:cranelift", "dep:cranelift-module"]
