[package]
name = "genpay-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.12"
bumpalo = { version = "3.16.0", features = ["collections"] }
genpay-lexer = { path = "../genpay-lexer" }
