[package]
name = "genpay"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
miette = { version = "7.5.0", features = ["fancy"] }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
colored = "3.0.0"
thiserror = "2.0.12"
mimalloc = "0.1.47"

genpay-lexer = { path = "../genpay-lexer" }
genpay-parser = { path = "../genpay-parser" }
genpay-semantic = { path = "../genpay-semantic" }
genpay-codegen = { path = "../genpay-codegen" }
bumpalo = { version = "3.16.0", features = ["collections"] }
genpay-linker = { path = "../genpay-linker" }
