[package]
name = "genpay"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
jemallocator = "0.5.4"
clap = { version = "4.5.35", features = ["derive"] }
miette = { version = "7.5.0", features = ["fancy"] }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
llvm-sys = { version = "180", features = ["prefer-dynamic"] }
colored = "3.0.0"
thiserror = "2.0.12"
bumpalo = { version = "3.19.0", features = ["collections"] }

genpay-lexer = { path = "../genpay-lexer" }
genpay-parser = { path = "../genpay-parser" }
genpay-hir = { path = "../genpay-hir" }
genpay-hir-lower = { path = "../genpay-hir-lower" }
genpay-semantic = { path = "../genpay-semantic" }
genpay-codegen = { path = "../genpay-codegen" }
genpay-linker = { path = "../genpay-linker" }

[dev-dependencies]
assert_cmd = "2.0.17"
anyhow = "1.0.99"
